--- a/css/custom.css
+++ b/css/custom.css
@@ -23,3 +23,9 @@ main {
 .seleccionado{
   text-decoration: underline !important;
 }
+
+#card-login{
+  border-style: solid;
+  border-width: 1px; 
+  border-color: red;
+}
