--- a/css/custom.css
+++ b/css/custom.css
@@ -25,7 +25,7 @@ main {
 }
 
 #card-login{
-  border-style: solid;
+  /*border-style: solid;
   border-width: 1px; 
-  border-color: red;
+  border-color: red;*/
 }
